--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -62,6 +62,8 @@ jobs:
       uses: docker/metadata-action@v4
       with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build and push Docker image
