--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -81,8 +81,8 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
           PASSWORD=penguin
-        #platforms: linux/amd64
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
+        #platforms: linux/amd64,linux/arm64
         provenance: false
     - name: cleanup image
       run: docker image rm ${TESTIMAGE}
