[WIP]RUN分割(タイムゾーン構成)

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,11 +7,11 @@ ENV LANG ${LC_ALL}
 ARG DEBCONF_FRONTEND=noninteractive
 ARG DEBIAN_FRONTEND=${DEBCONF_FRONTEND}
 # タイムゾーン周辺
-RUN --mount=type=cache,target=/var/lib/apt --mount=type=cache,target=/var/cache/apt \
-    --mount=type=tmpfs,target=/tmp --mount=type=tmpfs,target=/var/tmp \
-    apt-get update; \
-    apt-get install -y tzdata; \
-    ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime; dpkg-reconfigure tzdata
+#RUN --mount=type=cache,target=/var/lib/apt --mount=type=cache,target=/var/cache/apt \
+#    --mount=type=tmpfs,target=/tmp --mount=type=tmpfs,target=/var/tmp \
+RUN    apt-get update; \
+    apt-get install -y tzdata
+RUN    ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime; dpkg-reconfigure tzdata
 # ロケール設定
 COPY locale-ja.sh /etc/profile.d/
 RUN --mount=type=cache,target=/var/lib/apt --mount=type=cache,target=/var/cache/apt \
