--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -19,7 +19,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  #IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: densuke/linux-vm-docker
 
 jobs:
   build_job:
