--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -15,12 +15,12 @@ on:
       - "v*.*.*"
   # pull_request:
   #   branches: [ "main" ]
-  # workflow_dispatch:
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
-  #IMAGE_NAME: ${{ github.repository }}
-  IMAGE_NAME: densuke/linux-vm-docker
+  IMAGE_NAME: ${{ github.repository }}
+  #IMAGE_NAME: densuke/linux-vm-docker
 
 jobs:
   build_job:
@@ -31,35 +31,37 @@ jobs:
     # env:
     #   TESTIMAGE: test-${{ github.run_id }}-${{ github.run_number }}
     steps:
-    # タグ名からバージョン番号を取得する
-    # 例: v3.1.4 -> 3.1.4
-    - name: Set version number
+    - name: バージョン番号取得
+      # タグ名からバージョン番号を取得する
+      # 例: v3.1.4 -> v3.1.4
+      # ただし現在は開発中のため、強制的に v2.9.0としておきます
       run: |
-        VERSION=$(echo "${{ github.ref }}" | sed -e 's;refs/tags/v;;')
+        #VERSION=$(echo "${{ github.ref }}" | sed -e 's;refs/tags/v;;')
+        VERSION=v2.9.0
         echo "VERSION=${VERSION}" >> $GITHUB_ENV
-    # 環境変数VERSIONから、マイナーバージョンタグを生成する
-    # VERSION=v3.1.4 -> MINOR_VERSION=v3.1
-    - name: Set minor version number
+    - name: マイナーバージョン取得
+      # 環境変数VERSIONから、マイナーバージョンタグを生成する
+      # VERSION=v3.1.4 -> MINOR_VERSION=v3.1
       run: |
         MINOR_VERSION=$(echo "${{ env.VERSION }}" | sed -e 's;\.[0-9]*$;;')
         echo "MINOR_VERSION=${MINOR_VERSION}" >> $GITHUB_ENV
-    # 環境変数VERSIONから、メジャーバージョンタグを生成する
-    # VERSION=v3.1.4 -> MAJOR_VERSION=v3
-    - name: Set major version number
+    - name: メジャーバージョン取得
+      # 環境変数VERSIONから、メジャーバージョンタグを生成する
+      # VERSION=v3.1.4 -> MAJOR_VERSION=v3
       run: |
         MAJOR_VERSION=$(echo "${{ env.VERSION }}" | sed -e 's;\.[0-9]*\.[0-9]*$;;')
         echo "MAJOR_VERSION=${MAJOR_VERSION}" >> $GITHUB_ENV
     - uses: actions/checkout@v3
     - name: Log in to the Container registry
-      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
+      # コンテナレジストリ荷ログインする
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Extract metadata (tags, labels) for Docker
+      # リポジトリからメタデータを取得する
       id: meta
-      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
       uses: docker/metadata-action@v4
       with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -68,17 +70,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build and push Docker image
-      #if: ${{ endsWith(github.ref, '/main') && github.event_name != 'pull_request' }}
       uses: docker/build-push-action@v4
       with:
         context: src
         push: true
         tags: |
-          ${{ steps.meta.outputs.tags }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          - ${{ steps.meta.outputs.tags }}
+          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
+          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
+          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
           PASSWORD=penguin
