リリース工程が走るように無理やり条件変更

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -6,11 +6,11 @@ on:
     types:
       - completed
   push:
-    # branches:
-    #   - "ci"
-    #   - "main"
-    #   - "dev"
-    #   - "feature/*"
+    branches:
+      # - "ci"
+      # - "main"
+      # - "dev"
+      - "feature/*"
     tags:
       - "v*.*.*"
   # pull_request:
