--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -75,11 +75,11 @@ jobs:
         context: src
         push: true
         tags: |
-          - ${{ steps.meta.outputs.tags }}
-          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
-          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
-          - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          ${{ steps.meta.outputs.tags }}
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          # ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
+          # ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
+          # ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
           PASSWORD=penguin
