--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -57,8 +57,9 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        #username: ${{ github.actor }}
+        username: ${{ secrets.REPO_USER}}
+        password: ${{ secrets.REPO_TOKEN }}
     - name: Extract metadata (tags, labels) for Docker
       # リポジトリからメタデータを取得する
       id: meta
