--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -6,11 +6,11 @@ on:
     types:
       - completed
   push:
-    branches:
+    # branches:
       # - "ci"
       # - "main"
       # - "dev"
-      - "feature/*"
+      # - "feature/*"
     tags:
       - "v*.*.*"
   # pull_request:
@@ -88,6 +88,6 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
           PASSWORD=penguin
-        platforms: linux/amd64
-        #platforms: linux/amd64,linux/arm64
+        # platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         provenance: false
