--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -50,39 +50,51 @@ jobs:
       run: |
         MAJOR_VERSION=$(echo "${{ env.VERSION }}" | sed -e 's;\.[0-9]*\.[0-9]*$;;')
         echo "MAJOR_VERSION=${MAJOR_VERSION}" >> $GITHUB_ENV
-    - uses: actions/checkout@v3
-    - name: Log in to the Container registry
-      # コンテナレジストリ荷ログインする
-      uses: docker/login-action@v3
+    - name: ビルド作業
+      uses: ./.github/actions/Image-builder
       with:
-        registry: ${{ env.REGISTRY }}
-        #username: ${{ github.actor }}
-        username: ${{ secrets.REPO_USER}}
-        password: ${{ secrets.REPO_TOKEN }}
-    - name: Extract metadata (tags, labels) for Docker
-      # リポジトリからメタデータを取得する
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: src
-        push: true
-        tags: |
-          ${{ steps.meta.outputs.tags }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        REGISTRY: ${{ env.REGISTRY }}
+        IMAGE_NAME: ${{ env.IMAGE_NAME }}
+        REPO_USER: ${{ secrets.REPO_USER }}
+        REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+        TAGS: |
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
-        labels: ${{ steps.meta.outputs.labels }}
-        build-args: |
-          PASSWORD=penguin
-        # platforms: linux/amd64
-        platforms: linux/amd64,linux/arm64
-        provenance: false
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+    # - uses: actions/checkout@v3
+    # - name: Log in to the Container registry
+    #   # コンテナレジストリ荷ログインする
+    #   uses: docker/login-action@v3
+    #   with:
+    #     registry: ${{ env.REGISTRY }}
+    #     #username: ${{ github.actor }}
+    #     username: ${{ secrets.REPO_USER}}
+    #     password: ${{ secrets.REPO_TOKEN }}
+    # - name: Extract metadata (tags, labels) for Docker
+    #   # リポジトリからメタデータを取得する
+    #   id: meta
+    #   uses: docker/metadata-action@v4
+    #   with:
+    #       images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+    # - name: Set up QEMU
+    #   uses: docker/setup-qemu-action@v1
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v3
+    # - name: Build and push Docker image
+    #   uses: docker/build-push-action@v4
+    #   with:
+    #     context: src
+    #     push: true
+    #     tags: |
+    #       ${{ steps.meta.outputs.tags }}
+    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
+    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
+    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+    #     labels: ${{ steps.meta.outputs.labels }}
+    #     build-args: |
+    #       PASSWORD=penguin
+    #     # platforms: linux/amd64
+    #     platforms: linux/amd64,linux/arm64
+    #     provenance: false
