--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -51,7 +51,8 @@ jobs:
         MAJOR_VERSION=$(echo "${{ env.VERSION }}" | sed -e 's;\.[0-9]*\.[0-9]*$;;')
         echo "MAJOR_VERSION=${MAJOR_VERSION}" >> $GITHUB_ENV
     - name: ビルド作業
-      uses: ./.github/actions/Image-builder
+      #uses: ./.github/actions/Image-builder
+      uses: densuke/image-build@v1
       with:
         REGISTRY: ${{ env.REGISTRY }}
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
