--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -35,8 +35,7 @@ jobs:
       # 例: v3.1.4 -> v3.1.4
       # ただし現在は開発中のため、強制的に v2.9.0としておきます
       run: |
-        #VERSION=$(echo "${{ github.ref }}" | sed -e 's;refs/tags/v;;')
-        VERSION=v2.9.0
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's;refs/tags/v;;')
         echo "VERSION=${VERSION}" >> $GITHUB_ENV
     - name: マイナーバージョン取得
       # 環境変数VERSIONから、マイナーバージョンタグを生成する
@@ -51,7 +50,6 @@ jobs:
         MAJOR_VERSION=$(echo "${{ env.VERSION }}" | sed -e 's;\.[0-9]*\.[0-9]*$;;')
         echo "MAJOR_VERSION=${MAJOR_VERSION}" >> $GITHUB_ENV
     - name: ビルド作業
-      #uses: ./.github/actions/Image-builder
       uses: densuke/image-build@v1.0.1
       with:
         REGISTRY: ${{ env.REGISTRY }}
@@ -63,39 +61,3 @@ jobs:
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-    # - uses: actions/checkout@v3
-    # - name: Log in to the Container registry
-    #   # コンテナレジストリ荷ログインする
-    #   uses: docker/login-action@v3
-    #   with:
-    #     registry: ${{ env.REGISTRY }}
-    #     #username: ${{ github.actor }}
-    #     username: ${{ secrets.REPO_USER}}
-    #     password: ${{ secrets.REPO_TOKEN }}
-    # - name: Extract metadata (tags, labels) for Docker
-    #   # リポジトリからメタデータを取得する
-    #   id: meta
-    #   uses: docker/metadata-action@v4
-    #   with:
-    #       images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-    # - name: Set up QEMU
-    #   uses: docker/setup-qemu-action@v1
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v3
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@v4
-    #   with:
-    #     context: src
-    #     push: true
-    #     tags: |
-    #       ${{ steps.meta.outputs.tags }}
-    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MAJOR_VERSION }}
-    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.MINOR_VERSION }}
-    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
-    #     labels: ${{ steps.meta.outputs.labels }}
-    #     build-args: |
-    #       PASSWORD=penguin
-    #     # platforms: linux/amd64
-    #     platforms: linux/amd64,linux/arm64
-    #     provenance: false
