--- a/.github/workflows/Release-main.yml
+++ b/.github/workflows/Release-main.yml
@@ -2,7 +2,7 @@ name: リリース工程(main,latestタグ)
 
 on:
   workflow_run:
-    workflows: ["CI"]
+    workflows: ["イメージ生成ができるかのCI"]
     types:
       - completed
   push:
