--- a/.github/workflows/Release-main.yml
+++ b/.github/workflows/Release-main.yml
@@ -5,6 +5,8 @@ on:
     workflows: ["イメージ生成ができるかのCI"]
     types:
       - completed
+    branches:
+      - "main"
   # push:
   #   branches:
   #     - "main"
@@ -25,37 +27,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    # - name: Log in to the Container registry
-    #   # コンテナレジストリ荷ログインする
-    #   uses: docker/login-action@v3
-    #   with:
-    #     registry: ${{ env.REGISTRY }}
-    #     #username: ${{ github.actor }}
-    #     username: ${{ secrets.REPO_USER}}
-    #     password: ${{ secrets.REPO_TOKEN }}
-    # - name: Extract metadata (tags, labels) for Docker
-    #   # リポジトリからメタデータを取得する
-    #   id: meta
-    #   uses: docker/metadata-action@v4
-    #   with:
-    #       images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-    # - name: Set up QEMU
-    #   uses: docker/setup-qemu-action@v1
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v3
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@v4
-    #   with:
-    #     context: src
-    #     push: true
-    #     tags: |
-    #       ${{ steps.meta.outputs.tags }}
-    #       ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-    #     labels: ${{ steps.meta.outputs.labels }}
-    #     build-args: |
-    #       PASSWORD=penguin
-    #     platforms: linux/amd64,linux/arm64
-    #     provenance: false
     - name: ビルド作業
       uses: densuke/image-build@v1.0.1
       with:
@@ -64,5 +35,4 @@ jobs:
         REPO_USER: ${{ secrets.REPO_USER }}
         REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         TAGS: |
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
